--- a/src/app.yaml
+++ b/src/app.yaml
@@ -1,9 +1,5 @@
-runtime: python
-env: flex
+runtime: python37
 entrypoint: gunicorn -b :$PORT main:app
-
-runtime_config:
-  python_version: 3
 
 handlers:
 - url: /static
