--- a/src/app.yaml
+++ b/src/app.yaml
@@ -1,5 +1,9 @@
-runtime: python37
+runtime: python
+env: flex
 entrypoint: gunicorn -b :$PORT main:app
+
+runtime_config:
+  python_version: 3
 
 handlers:
 - url: /static
