--- a/src/package.json
+++ b/src/package.json
@@ -19,6 +19,7 @@
   "devDependencies": {
     "ejs": "^2.7.1",
     "fs-extra": "^8.1.0",
+    "jsdom": "^15.2.0",
     "showdown": "^1.9.0"
   }
 }
