--- a/src/package.json
+++ b/src/package.json
@@ -21,6 +21,7 @@
     "fs-extra": "^8.1.0",
     "jsdom": "^15.2.0",
     "prettier": "^1.18.2",
-    "showdown": "^1.9.0"
+    "showdown": "^1.9.0",
+    "recursive-readdir": "^2.2.2"
   }
 }
