--- a/src/app.yaml
+++ b/src/app.yaml
@@ -3,8 +3,9 @@ entrypoint: gunicorn -b :$PORT main:app
 default_expiration: 3h
 
 handlers:
-- url: /static/(.*\.(woff|woff2))$
+- url: /(.*\.(woff|woff2))$
   static_files: static/\1
+  upload: static/.*\.(woff|woff2)$
   secure: always
   expiration: 365d
 
