Restrict Image Compression Action to pull requests from this repo (#816)

--- a/.github/workflows/calibreapp-image-action.yml
+++ b/.github/workflows/calibreapp-image-action.yml
@@ -7,6 +7,8 @@ on:
       - '**.webp'
 jobs:
   build:
+    # Only run on Pull Requests within the same repository, and not from forks as they don't work
+    if: github.event.pull_request.head.repo.full_name == github.repository
     name: calibreapp/image-actions
     runs-on: ubuntu-latest
     steps:
