Ebook for the Almanac - take 2 (#817)
* Committing what I have on the generator so far.

* Tidied up some more stuff.

* Generated the pdf using weasy.

* Tweaked some stuff and added weasyprint to the requirements.

* Move to general base templates and add Japanese version

* Update README on ebook generation steps

* Author improvements

* Fix meta data

* Handle cross references and misc other fixes

* Add Intro, Foreword, Methodology and Contribitors

* Improved contributors plus some other fixes

* Fix typos and add back images for weasyprint

* Regenerate ebook

* Misc Fixes

* Add ebook link to ToC

* Remove bios from JSON config as now in base.html

* Sorted Contributors

* Fix figure links

* Regen ebook

* Remove Figure link underlines in print mode

* Update src/main.py

Co-authored-by: Rick Viscomi <rviscomi@users.noreply.github.com>

* Update src/main.py

Co-authored-by: Rick Viscomi <rviscomi@users.noreply.github.com>

* Update src/templates/base/2019/table_of_contents.html

Co-authored-by: Rick Viscomi <rviscomi@users.noreply.github.com>

* Review feedback

* Review feedback

* Review feedback

* Review feedback

* Fix typo

* Fix typo

* Fix Foreword title

Co-authored-by: Mike Geyser <mikegeyser@gmail.com>
Co-authored-by: Rick Viscomi <rviscomi@users.noreply.github.com>

--- a/src/package.json
+++ b/src/package.json
@@ -15,6 +15,8 @@
   "homepage": "https://github.com/HTTPArchive/almanac.httparchive.org#readme",
   "scripts": {
     "generate": "node ./tools/generate",
+    "ebook_2019_en": "weasyprint http://127.0.0.1:8080/en/2019/ebook static/pdfs/web_almanac_2019_en.pdf",
+    "ebook_2019_ja": "weasyprint http://127.0.0.1:8080/ja/2019/ebook static/pdfs/web_almanac_2019_ja.pdf",
     "deploy": "echo \"Y\" | gcloud app deploy --project webalmanac --stop-previous-version"
   },
   "devDependencies": {
