--- a/.github/workflows/calibreapp-image-action.yml
+++ b/.github/workflows/calibreapp-image-action.yml
@@ -1,3 +1,22 @@
+###########################
+## Calibre Image Action  ##
+###########################
+# 
+# This runs the calibre GitHub action to compress our images
+#
+# This Action has a few limitations:
+#
+# 1) This currently only works on pull requests from this repo
+#    and fails silently for PRs from forks. We've added a PR
+#    to handle this better (https://github.com/calibreapp/image-actions/pull/54)
+#    and after that can probably combine to the generate_chapters.yml.
+#
+# 2) It seems to only do a basic level of optimisations and better results can
+#    be achieved from https://tinypng.com/ or https://squoosh.app/ but not as automated
+#    so still good to have this.
+#
+# 3) Currently doesn't handle WebP (https://github.com/calibreapp/image-actions/issues/31)
+#
 name: Compress images
 on:
   pull_request:
