--- a/.github/workflows/generate_chapters.yml
+++ b/.github/workflows/generate_chapters.yml
@@ -1,10 +1,14 @@
+######################################
+## Custom Web Almanac GitHub action ##
+######################################
+#
 # Updates timestamps, increments CSS, and then runs "npm run generate"
 # on any pushes to main for markdown, templates or generate scripts
 #
 # Then we open a Pull Request for any changes generated.
 #
 # We do it on a push, rather than on pull request, and only on main to
-# avoid needing GitHub Personal access tokens and to avoid merge conflicts
+# avoid needing GitHub Personal Access Tokens and to avoid merge conflicts
 #
 name: Generate Chapters on Push
 on:
