--- a/src/package.json
+++ b/src/package.json
@@ -24,6 +24,7 @@
     "jsdom": "^15.2.1",
     "prettier": "^1.18.2",
     "recursive-readdir": "^2.2.2",
-    "showdown": "^1.9.0"
+    "showdown": "^1.9.0",
+    "web-vitals": "^0.2.3"
   }
 }
