CSS newline linter (#1053)
* Test newline linting

* Add newlines

* Missed some newlines

* Missed new line

* Reset Action back to normal

--- a/.github/linters/.stylelintrc.json
+++ b/.github/linters/.stylelintrc.json
@@ -28,7 +28,7 @@
                 "ignoreProperties": ["prince-pdf-display-doc-title","prince-pdf-tag-type"]
             }
         ],
-        "selector-list-comma-newline-after": null,
+        "selector-list-comma-newline-after": "always",
         "selector-pseudo-element-no-unknown": [
             true,
             {
