--- a/.github/workflows/progress-tracker.yml
+++ b/.github/workflows/progress-tracker.yml
@@ -82,7 +82,7 @@ jobs:
                 Math.min(...nums),
                 Math.max(...nums),
                 (nums.reduce((a,b) => a + b, 0) / nums.length).toFixed(2),
-                (nums.length % 2 ? nums[half] : (nums[half - 1] + nums[half]) / 2.0).toFixed(2)
+                nums[half]
               ]
             }
 
@@ -118,7 +118,7 @@ jobs:
             }
 
             const parseUserNames = members => {
-              return [...members.matchAll(/@(?<username>\w+)/g)].map(u => u.groups.username)
+              return [...members.matchAll(/@(?<username>[\w-]+)/g)].map(u => u.groups.username)
             }
 
             const parseTeam = text => {
@@ -205,8 +205,15 @@ jobs:
               ':-----------------|------:|----:|----:|-----:|------:'
             ].concat(Object.entries(teamStats).map(([k, v]) => `${k} | ${v.join(' | ')}`)).join('\n')
 
-            const teams = Object.entries(teamMembers).map(([k, v]) => {
-              return `### ${k} (${Object.keys(v).length})\n\n${Object.entries(v).sort().map(([m, c]) => `<span title="Chapters: ${c.join(', ')}">${m} (${c.length})</span>`).join(', ')}`
+            const teams = Object.entries(teamMembers).map(([team, members]) => {
+              const memberList = Object.entries(members).sort(([x, a], [y, b]) => {
+                return x.toLocaleLowerCase().localeCompare(y.toLocaleLowerCase())
+              }).sort(([x, a], [y, b]) => {
+                return b.length - a.length
+              }).map(([member, chapters]) => {
+                return `<span title="Chapters: ${chapters.join(', ')}">${member} (${chapters.length})</span>`
+              }).join(', ')
+              return `### ${team} (${Object.keys(members).length})\n\n${memberList}`
             }).join('\n\n')
 
             github.issues.update({
